.tanzu/config/httproute-sample-python-app.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/sample-python-app
  name: sample-python-app-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: sample-python-app
  rules:
  - backendRefs:
    - kind: Service
      name: sample-python-app
      port: 8080
